--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class="hero"></section>
     <section class="content">
-        <section class="search-engine-optimization">
+        <section class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Picture of a desk with a notebook that says SEO"/>
             <h2>Search Engine Optimization</h2>
             <p>
