--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
-    <main class="content">
+    <main class="hero"></main>
+    <section class="content">
         <section class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Picture of a desk with a notebook that says SEO"/>
             <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </main>
+    </section>
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
